Ensure text remains visible during webfont load

--- a/wp-content/themes/mytheme/style.css
+++ b/wp-content/themes/mytheme/style.css
@@ -1425,3 +1425,16 @@ iframe {
 	z-index: 100000;
 	/* Above WP toolbar. */
 }
+
+/* Ensure text remains visible during webfont load 
+https://web.dev/font-display/?utm_source=lighthouse&utm_medium=lr
+*/
+
+@font-face {
+  font-family: 'Pacifico';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
+  font-display: swap;
+}
+
